fix(): bug where GTFS export events were not cleared
* jobEventsMap entry was replaced by NEPTUNE export events